assignments/projects/1-java_delphi_compiler-updated_grammar/delphi_2/delphiParser.java
// Generated from delphi.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class delphiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, IDENT=28, INTEGER=29, COLON=30, SEMI=31, 
		NEWLINE=32, WS=33, EQUAL=34, NOT_EQUAL=35;
	public static final int
		RULE_program = 0, RULE_classDeclaration = 1, RULE_visibilitySection = 2, 
		RULE_memberDeclaration = 3, RULE_constructorDeclaration = 4, RULE_destructorDeclaration = 5, 
		RULE_constructorImplementation = 6, RULE_destructorImplementation = 7, 
		RULE_methodDeclaration = 8, RULE_functionDeclartion = 9, RULE_methodImplementation = 10, 
		RULE_functionImplementation = 11, RULE_fieldDeclaration = 12, RULE_variableDeclaration = 13, 
		RULE_varDeclList = 14, RULE_varDecl = 15, RULE_type_ = 16, RULE_statement = 17, 
		RULE_variableAssignment = 18, RULE_assignment = 19, RULE_methodCall = 20, 
		RULE_writelnCall = 21, RULE_objectCreation = 22, RULE_whileStatement = 23, 
		RULE_forStatement = 24, RULE_breakStatement = 25, RULE_continueStatement = 26, 
		RULE_expression = 27, RULE_simpleExpression = 28, RULE_relationaloperator = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDeclaration", "visibilitySection", "memberDeclaration", 
			"constructorDeclaration", "destructorDeclaration", "constructorImplementation", 
			"destructorImplementation", "methodDeclaration", "functionDeclartion", 
			"methodImplementation", "functionImplementation", "fieldDeclaration", 
			"variableDeclaration", "varDeclList", "varDecl", "type_", "statement", 
			"variableAssignment", "assignment", "methodCall", "writelnCall", "objectCreation", 
			"whileStatement", "forStatement", "breakStatement", "continueStatement", 
			"expression", "simpleExpression", "relationaloperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'program'", "'('", "')'", "'begin'", "'end'", "'.'", "'type'", 
			"'class'", "'public'", "'private'", "'constructor'", "'destructor'", 
			"'procedure'", "'function'", "'var'", "','", "'Integer'", "'String'", 
			"'Boolean'", "':='", "'WriteLn'", "'whileLoop'", "'doLoop'", "'forLoop'", 
			"'toLoop'", "'break'", "'continue'", null, null, "':'", "';'", null, 
			null, "'='", "'<>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "IDENT", "INTEGER", "COLON", "SEMI", "NEWLINE", 
			"WS", "EQUAL", "NOT_EQUAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "delphi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public delphiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public List<ClassDeclarationContext> classDeclaration() {
			return getRuleContexts(ClassDeclarationContext.class);
		}
		public ClassDeclarationContext classDeclaration(int i) {
			return getRuleContext(ClassDeclarationContext.class,i);
		}
		public List<ConstructorImplementationContext> constructorImplementation() {
			return getRuleContexts(ConstructorImplementationContext.class);
		}
		public ConstructorImplementationContext constructorImplementation(int i) {
			return getRuleContext(ConstructorImplementationContext.class,i);
		}
		public List<DestructorImplementationContext> destructorImplementation() {
			return getRuleContexts(DestructorImplementationContext.class);
		}
		public DestructorImplementationContext destructorImplementation(int i) {
			return getRuleContext(DestructorImplementationContext.class,i);
		}
		public List<MethodImplementationContext> methodImplementation() {
			return getRuleContexts(MethodImplementationContext.class);
		}
		public MethodImplementationContext methodImplementation(int i) {
			return getRuleContext(MethodImplementationContext.class,i);
		}
		public List<FunctionImplementationContext> functionImplementation() {
			return getRuleContexts(FunctionImplementationContext.class);
		}
		public FunctionImplementationContext functionImplementation(int i) {
			return getRuleContext(FunctionImplementationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__0);
			setState(61);
			match(IDENT);
			setState(62);
			match(T__1);
			setState(63);
			match(IDENT);
			setState(64);
			match(T__2);
			setState(65);
			match(SEMI);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__6) {
				{
				{
				setState(66);
				classDeclaration();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(72);
				constructorImplementation();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__11) {
				{
				{
				setState(78);
				destructorImplementation();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12) {
				{
				{
				setState(84);
				methodImplementation();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				{
				setState(90);
				functionImplementation();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(96);
				variableDeclaration();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(T__3);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << T__26) | (1L << IDENT))) != 0)) {
				{
				{
				setState(103);
				statement();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(T__4);
			setState(110);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode EQUAL() { return getToken(delphiParser.EQUAL, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public List<VisibilitySectionContext> visibilitySection() {
			return getRuleContexts(VisibilitySectionContext.class);
		}
		public VisibilitySectionContext visibilitySection(int i) {
			return getRuleContext(VisibilitySectionContext.class,i);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitClassDeclaration(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__6);
			setState(113);
			match(IDENT);
			setState(114);
			match(EQUAL);
			setState(115);
			match(T__7);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8 || _la==T__9) {
				{
				{
				setState(116);
				visibilitySection();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(T__4);
			setState(123);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VisibilitySectionContext extends ParserRuleContext {
		public List<MemberDeclarationContext> memberDeclaration() {
			return getRuleContexts(MemberDeclarationContext.class);
		}
		public MemberDeclarationContext memberDeclaration(int i) {
			return getRuleContext(MemberDeclarationContext.class,i);
		}
		public VisibilitySectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_visibilitySection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterVisibilitySection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitVisibilitySection(this);
		}
	}

	public final VisibilitySectionContext visibilitySection() throws RecognitionException {
		VisibilitySectionContext _localctx = new VisibilitySectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_visibilitySection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==T__8 || _la==T__9) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << IDENT))) != 0)) {
				{
				{
				setState(126);
				memberDeclaration();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemberDeclarationContext extends ParserRuleContext {
		public ConstructorDeclarationContext constructorDeclaration() {
			return getRuleContext(ConstructorDeclarationContext.class,0);
		}
		public DestructorDeclarationContext destructorDeclaration() {
			return getRuleContext(DestructorDeclarationContext.class,0);
		}
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public FieldDeclarationContext fieldDeclaration() {
			return getRuleContext(FieldDeclarationContext.class,0);
		}
		public FunctionDeclartionContext functionDeclartion() {
			return getRuleContext(FunctionDeclartionContext.class,0);
		}
		public MemberDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memberDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterMemberDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitMemberDeclaration(this);
		}
	}

	public final MemberDeclarationContext memberDeclaration() throws RecognitionException {
		MemberDeclarationContext _localctx = new MemberDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_memberDeclaration);
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				constructorDeclaration();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				destructorDeclaration();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				methodDeclaration();
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				fieldDeclaration();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				functionDeclartion();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public ConstructorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstructorDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstructorDeclaration(this);
		}
	}

	public final ConstructorDeclarationContext constructorDeclaration() throws RecognitionException {
		ConstructorDeclarationContext _localctx = new ConstructorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constructorDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__10);
			setState(140);
			match(IDENT);
			setState(141);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestructorDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public DestructorDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructorDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDestructorDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDestructorDeclaration(this);
		}
	}

	public final DestructorDeclarationContext destructorDeclaration() throws RecognitionException {
		DestructorDeclarationContext _localctx = new DestructorDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_destructorDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__11);
			setState(144);
			match(IDENT);
			setState(145);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructorImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ConstructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterConstructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitConstructorImplementation(this);
		}
	}

	public final ConstructorImplementationContext constructorImplementation() throws RecognitionException {
		ConstructorImplementationContext _localctx = new ConstructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constructorImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(T__10);
			setState(148);
			match(IDENT);
			setState(149);
			match(T__5);
			setState(150);
			match(IDENT);
			setState(151);
			match(SEMI);
			setState(152);
			match(T__3);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << T__26) | (1L << IDENT))) != 0)) {
				{
				{
				setState(153);
				statement();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(T__4);
			setState(160);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestructorImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public DestructorImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructorImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterDestructorImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitDestructorImplementation(this);
		}
	}

	public final DestructorImplementationContext destructorImplementation() throws RecognitionException {
		DestructorImplementationContext _localctx = new DestructorImplementationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_destructorImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(T__11);
			setState(163);
			match(IDENT);
			setState(164);
			match(T__5);
			setState(165);
			match(IDENT);
			setState(166);
			match(SEMI);
			setState(167);
			match(T__3);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << T__26) | (1L << IDENT))) != 0)) {
				{
				{
				setState(168);
				statement();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			match(T__4);
			setState(175);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitMethodDeclaration(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_methodDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(T__12);
			setState(178);
			match(IDENT);
			setState(179);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclartionContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(delphiParser.IDENT, 0); }
		public TerminalNode COLON() { return getToken(delphiParser.COLON, 0); }
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public TerminalNode SEMI() { return getToken(delphiParser.SEMI, 0); }
		public FunctionDeclartionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclartion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterFunctionDeclartion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitFunctionDeclartion(this);
		}
	}

	public final FunctionDeclartionContext functionDeclartion() throws RecognitionException {
		FunctionDeclartionContext _localctx = new FunctionDeclartionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionDeclartion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__13);
			setState(182);
			match(IDENT);
			setState(183);
			match(COLON);
			setState(184);
			type_();
			setState(185);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MethodImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterMethodImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitMethodImplementation(this);
		}
	}

	public final MethodImplementationContext methodImplementation() throws RecognitionException {
		MethodImplementationContext _localctx = new MethodImplementationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_methodImplementation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__12);
			setState(188);
			match(IDENT);
			setState(189);
			match(T__5);
			setState(190);
			match(IDENT);
			setState(191);
			match(SEMI);
			setState(192);
			match(T__3);
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__14) | (1L << T__20) | (1L << T__21) | (1L << T__23) | (1L << T__25) | (1L << T__26) | (1L << IDENT))) != 0)) {
				{
				{
				setState(193);
				statement();
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(199);
			match(T__4);
			setState(200);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionImplementationContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(delphiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(delphiParser.IDENT, i);
		}
		public TerminalNode COLON() { return getToken(delphiParser.COLON, 0); }
		public Type_Context type_() {
			return getRuleContext(Type_Context.class,0);
		}
		public List<TerminalNode> SEMI() { return getTokens(delphiParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(delphiParser.SEMI, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionImplementationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionImplementation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).enterFunctionImplementation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof delphiListener ) ((delphiListener)listener).exitFunctionImplementation(this);
		}
	}
